2009-02-10  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* NEWS, configure.ac: Preparing 1.1 release.

	* paperkey.1: Don't mention the README file.  It's not really
	necessary here, and not all platfoms install it.  Noted by Todd
	Zullinger.

	* output.c (output_file_format, output_start): Some file format
	documentation tweaks.

2009-01-27  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): Properly set up stdin to be in binary mode on
	Win32.

2009-01-22  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* README: Update.

	* configure.ac: Preparing 1.0 release.

2009-01-16  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): --version strings from autoconf.

	* configure.ac: autoupdate, and some m4 magic so we can propagate
	the copyright line into config.h.

	* paperkey.spec.in: Borrow some RPM-fu from the Fedora RPM by Todd
	Zullinger.

	* output.c (output_file_format): Clarify we're all big endian
	here.  Noted by Frédéric Brière.

2009-01-14  David Shaw  <dshaw@jabberwocky.com>

	* Makefile.am: Autogenerate paperkey.txt from paperkey.1 when
	cross compiling.

	* configure.ac, Makefile.am: Don't run selftest when cross
	compiling.

	* Makefile.am: When cross compiling for Win32, add README.WIN32, a
	regular text file version of the man page, and the Win32 binary.

	* README: Clarify what universal binaries are good for.

	* configure.ac: Add "-win32" to dist version string when cross
	compiling.

	* README.WIN32: New.

2008-02-01  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* NEWS, configure.ac: Preparing 0.8 release.

2008-01-31  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (read_secrets_file): Skip \r lines as well for Win32.

	* NEWS: Update for 0.8: --file-format, --comment, and SHA-1 fixes.

	* paperkey.c (usage, main), output.c (output_start): Add --comment
	option to include an arbitrary comment in base16 output.
