@@ -1,3 +1,8 @@
+2009-10-14  David Shaw  <dshaw@rowlf2.jabberwocky.com>
+
+	* paperkey.c (main): Force the umask to go-rwx, as we are going to
+	be creating files that contain secret key material.
+
 2009-02-10  David Shaw  <dshaw@jabberwocky.com>
 
 	* NEWS, configure.ac: Post-release commit.
